--- a/src/css/index.css
+++ b/src/css/index.css
@@ -23,10 +23,11 @@
         #fdbb2d 100%
     );
 
-    --background-lighter-transparent: rgba(255, 255, 255, 0.05);
     --background-light-transparent: rgba(255, 255, 255, 0.3);
-    --background-darker-transparent: rgba(0, 0, 0, 0.1);
+    --background-light-medium-transparent: rgba(255, 255, 255, 0.15);
+    --background-lighter-transparent: rgba(255, 255, 255, 0.05);
     --background-dark-transparent: rgba(0, 0, 0, 0.05);
+    --background-darker-transparent: rgba(0, 0, 0, 0.1);
     --background-dark-transparent-border: rgba(0, 0, 0, 0.025);
 
     --font-highlights: 'Bebas Neue', sans-serif;
@@ -79,14 +80,48 @@ body {
 .hero__nav__logos-container,
 .hero__nav__links-container {
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     margin-top: 2rem;
 }
 
-.hero__nav__logo,
-.hero__nav__link,
-.hero__nav__link:link,
-.hero__nav__link:visited,
+.nav__logo {
+    width: 3rem;
+    height: 3rem;
+    padding: .2rem;
+    margin: 0 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.1s ease-in;
+    border-radius: 50%;
+    border: 1px solid transparent;
+}
+
+.nav__logo img {
+    display: block;
+    margin: auto;
+}
+
+.nav__logo:focus,
+.nav__logo:hover {
+    background-color: var(--background-light-medium-transparent);
+    -webkit-filter: drop-shadow(2px 2px var(--color-accent));
+    filter: drop-shadow(3px 3px 0 var(--color-accent)) ;
+    transform: scale(1.2);
+    border: 1px solid var(--color-light);
+    box-shadow: 0 0 8px 0 var(--color-light);
+}
+
+.nav__logo:active {
+    background-color: var(--background-light-medium-transparent);
+    transform: scale(1);
+    border: 1px solid var(--color-light);
+    box-shadow: none;
+}
+
+.nav__link,
+.nav__link:link,
+.nav__link:visited,
 .footer__content__nav__link,
 .footer__content__logo {
     display: block; /* To make transform work */
@@ -102,8 +137,8 @@ body {
     transition: all 0.2s ease-in;
 }
 
-.hero__nav__link:focus,
-.hero__nav__link:hover {
+.nav__link:focus,
+.nav__link:hover {
     border: 1px solid var(--color-light);
     box-shadow: inset 0 -4em 0 0 var(--background-light-transparent),
         0 4px 0 0 var(--color-accent), 0 8px 8px 0 rgba(255, 255, 255, 0.4);
@@ -111,7 +146,7 @@ body {
     transform: translateY(-3px);
 }
 
-.hero__nav__link:active {
+.nav__link:active {
     border: 1px solid var(--color-light);
     box-shadow: none;
     text-shadow: none;
@@ -733,9 +768,12 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    align-items: flex-start;
+    z-index: 10;
 }
 
 .footer__content__contact {
+    width: 15rem;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -783,6 +821,16 @@ body {
 }
 
 /* SECTION Icons */
+
+.icon-nav-light {
+    height: 2rem;
+    width: 2rem;
+    margin: -0.1rem 0.5rem 0 0;
+    -webkit-filter: invert(100%) sepia(24%) saturate(0%) hue-rotate(294deg)
+        brightness(109%) contrast(101%);
+    filter: invert(100%) sepia(24%) saturate(0%) hue-rotate(294deg)
+        brightness(109%) contrast(101%);
+}
 
 .icon-button-dark {
     height: 1.2rem;
@@ -895,4 +943,5 @@ body {
             0 4px 0 #cccccc, 0 5px 0 #cccccc, 0 6px 0 #cccccc, 0 7px 0 #cccccc,
             0 8px 0 #cccccc, 0 9px 0 #cccccc, 0 50px 30px rgba(0, 0, 0, 0.3);
     }
+}
 }
