--- a/src/css/index.css
+++ b/src/css/index.css
@@ -87,7 +87,7 @@ body {
 .nav__logo {
     width: 3rem;
     height: 3rem;
-    padding: .2rem;
+    padding: 0.2rem;
     margin: 0 1rem;
     display: flex;
     justify-content: center;
@@ -106,7 +106,7 @@ body {
 .nav__logo:hover {
     background-color: var(--background-light-medium-transparent);
     -webkit-filter: drop-shadow(2px 2px var(--color-accent));
-    filter: drop-shadow(3px 3px 0 var(--color-accent)) ;
+    filter: drop-shadow(3px 3px 0 var(--color-accent));
     transform: scale(1.2);
     border: 1px solid var(--color-light);
     box-shadow: 0 0 8px 0 var(--color-light);
@@ -176,18 +176,25 @@ body {
     text-align: center;
     font-size: 9rem;
     letter-spacing: 0.3em;
-    text-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
-    -webkit-animation: web-dev-pop-up 1s cubic-bezier(0.25, 0.46, 0.45, 0.94)
-        both;
-    animation: web-dev-pop-up 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-    -webkit-animation-delay: 0.2s;
-    animation-delay: 0.2s;
+    /* text-shadow: 0 5px 5px rgba(0, 0, 0, 0.3); */
+    transform-origin: 50% 50%;
+    text-shadow: 0 1px 0 #cccccc, 0 2px 0 #cccccc, 0 3px 0 #cccccc,
+        0 4px 0 #cccccc, 0 5px 0 #cccccc, 0 6px 0 #cccccc, 0 7px 0 #cccccc,
+        0 8px 0 #cccccc, 0 9px 0 #cccccc, 0 50px 30px rgba(0, 0, 0, 0.3);
+    /* animation: web-dev-pop-up 4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; */
+    -webkit-animation: web-dev-pop-up 4s ease-in-out both;
+    animation: web-dev-pop-up 4s ease-in-out both;
+    -webkit-animation-delay: 1s;
+    animation-delay: 1s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
 }
-.hero__main-text:hover {
+
+/* .hero__main-text:hover {
     -webkit-animation: web-dev-down 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94)
         both;
     animation: web-dev-down 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-}
+} */
 
 /* SECTION Hero - Articles */
 
@@ -895,38 +902,19 @@ body {
 }
 @keyframes web-dev-pop-up {
     0% {
-        transform: translateY(0);
-        transform-origin: 50% 50%;
-        /* text-shadow: none; */
+        transform: translateY(-2rem);
+    }
+    50% {
+        transform: translateY(-1rem);
     }
     100% {
         transform: translateY(-2rem);
-        transform-origin: 50% 50%;
-        text-shadow: 0 1px 0 #cccccc, 0 2px 0 #cccccc, 0 3px 0 #cccccc,
-            0 4px 0 #cccccc, 0 5px 0 #cccccc, 0 6px 0 #cccccc, 0 7px 0 #cccccc,
-            0 8px 0 #cccccc, 0 9px 0 #cccccc, 0 50px 30px rgba(0, 0, 0, 0.3);
     }
 }
 
 /* Animation modified by Damian Demasi */
 
-@-webkit-keyframes web-dev-down {
-    0% {
-        transform: translateY(-2rem);
-        transform-origin: 50% 50%;
-        text-shadow: 0 1px 0 #cccccc, 0 2px 0 #cccccc, 0 3px 0 #cccccc,
-            0 4px 0 #cccccc, 0 5px 0 #cccccc, 0 6px 0 #cccccc, 0 7px 0 #cccccc,
-            0 8px 0 #cccccc, 0 9px 0 #cccccc, 0 50px 30px rgba(0, 0, 0, 0.3);
-    }
-    50% {
-        transform: translateY(-1rem);
-        transform-origin: 50% 50%;
-        text-shadow: 0 1px 0 #cccccc, 0 2px 0 #cccccc, 0 3px 0 #cccccc,
-            0 4px 0 #cccccc, 0 5px 0 #cccccc, 0 6px 0 #cccccc, 0 7px 0 #cccccc,
-            0 8px 0 #cccccc, 0 9px 0 #cccccc, 0 50px 30px rgba(0, 0, 0, 0.3);
-    }
-}
-
+/*
 @keyframes web-dev-down {
     0% {
         transform: translateY(-2rem);
@@ -936,12 +924,10 @@ body {
             0 8px 0 #cccccc, 0 9px 0 #cccccc, 0 50px 30px rgba(0, 0, 0, 0.3);
     }
     50% {
-        /* FIXME find the right 100% to finish animation */
         transform: translateY(-1rem);
         transform-origin: 50% 50%;
         text-shadow: 0 1px 0 #cccccc, 0 2px 0 #cccccc, 0 3px 0 #cccccc,
             0 4px 0 #cccccc, 0 5px 0 #cccccc, 0 6px 0 #cccccc, 0 7px 0 #cccccc,
             0 8px 0 #cccccc, 0 9px 0 #cccccc, 0 50px 30px rgba(0, 0, 0, 0.3);
     }
-}
-}
+} */
