sticky-nav-behaviour-bug 2

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -828,6 +828,10 @@ body {
 
 /* SECTION Tweaks and decoration */
 
+.sticky-nav-reference {
+    margin-top: -8rem;
+}
+
 .hidden {
     position: relative;
     opacity: 0;
