--- a/src/css/index.css
+++ b/src/css/index.css
@@ -167,7 +167,7 @@ body {
 .nav__logos-container,
 .nav__links-container {
     display: flex;
-    margin: 1rem auto;
+    margin: 0.5rem auto;
     /* flex-wrap: wrap; */
     /* margin-top: 2rem; */
 }
@@ -302,7 +302,7 @@ body {
 
 .article--light p {
     color: var(--color-light);
-    margin: 1rem 0;
+    margin: 1rem;
 }
 
 .article--light p:first-child {
@@ -342,7 +342,7 @@ body {
 .article--dark p {
     color: var(--color-light-grey);
     font-size: 1rem;
-    margin-top: 1rem;
+    margin: 1rem;
 }
 
 .article--dark p:first-child {
@@ -1097,11 +1097,14 @@ body {
         padding: 0 2rem;
         width: 40rem;
     }
+    .sticky-nav-reference {
+        margin-top: -6rem;
+    }
     .sticky-nav {
-        height: 3rem;
+        height: 6rem;
     }
     .projects__nav {
-        top: 3rem;
+        top: 6rem;
     }
     .card__footer__button__text {
         font-size: 1.2rem;
@@ -1153,6 +1156,15 @@ body {
     }
     .move-up-margin {
         margin-top: -5.625rem;
+    }
+    .sticky-nav-reference {
+        margin-top: -4rem;
+    }
+    .sticky-nav {
+        height: 4rem;
+    }
+    .projects__nav {
+        top: 4rem;
     }
 }
 @media (min-width: 1100px) {
